

== CHANGELOG ==
  ===========

Taxonomy csv import/export 7.x-5.11-dev, 2012-03-05
-----------------------------------------------
#1463902 by Guillaume Viguier-Just: Support for image fields and folder check.
#1386904 by Daniel Berthereau: Added support to export list of tids and names.
#1386904 by Daniel Berthereau: Added simultaneous import of structure and fields

Taxonomy csv import/export 7.x-5.11-dev, 2012-03-05
Taxonomy csv import/export 6.x-5.11-dev, 2012-03-05
-----------------------------------------------
#1465942 by dannymacom: Fixed path check for non English help of Taxonomy CSV.


Taxonomy csv import/export 7.x-5.10, 2012-02-22
-----------------------------------------------
#1410784 by Daniel Berthereau: Added import/export of multivalued fields.
By Daniel Berthereau: Simplified import UI: only three generic import formats.
By Daniel Berthereau: Removed old code from 6.x in order to use only Field API.
By Daniel Berthereau: Clarified import of translations.
By Daniel Berthereau: Added export of translations.

Taxonomy csv import/export 7.x-5.10, 2012-02-22
Taxonomy csv import/export 6.x-5.10, 2012-02-22
-----------------------------------------------
By Daniel Berthereau: Updated documentation and checked code with Coder.

Taxonomy csv import/export 6.x-5.10, 2012-02-22
-----------------------------------------------
By Daniel Berthereau: Added a full export format compatible with Taxonomy CSV 7.


Taxonomy csv import/export 7.x-5.9, 2012-02-04
----------------------------------------------
By Daniel Berthereau: Added import custom fields (by tid and for any fields).
By Daniel Berthereau: Added import of translations by tid.
By Daniel Berthereau: Added export of fields.

Taxonomy csv import/export 7.x-5.9, 2012-02-04
Taxonomy csv import/export 6.x-5.9, 2012-02-04
----------------------------------------------
#969750 by Daniel Berthereau: Fixed check of Javascript, presumed true.
By Daniel Berthereau: Improved internal documentation and code.