@@ -68,6 +68,9 @@
                 <a href="#fields_format">Fields CSV format</a>
               </li>
               <li>
+                <a href="#fields_structure_format">Structure and Fields CSV format</a>
+              </li>
+              <li>
                 <a href="#fields_custom">Autocreation of Fields</a>
               </li>
             </ul>
@@ -128,6 +131,11 @@
     <li>Translation (if <a href="https://drupal.org/project/i18n">i18n</a> is installed)</li>
   </ul>
   <p>That's what you can choose in the first tab.</p>
+  <p>Notes:</p>
+  <ul>
+    <li>If you have a tree structure, you should import it before translations, and for each translation if you use a full Translate mode.</li>
+    <li>If you have a hierarchical vocabulary with duplicate names and fields, you should import them simultaneously (see <a href="#fields_structure_format">Structure and Fields</a>).</li>
+  </ul>
   <h4 id="structure"><a href="#contents">1. Structure</a></h4>
   <h5 id="flat"><a href="#contents">1. Terms (flat vocabulary)</a></h5>
     <p>Use this option to import a lot of terms in order to create a flat vocabulary. All items in your file will be imported as terms. Example:</p>
@@ -213,6 +221,7 @@
       </ul></div>
   <h4 id="fields"><a href="#contents">2. Fields</a></h4>
     <p>Terms are imported with a csv scheme provided by the user.</p>
+    <p>Structure and Fields can be imported simultaneously. This is particularly recommended when you import a tree with duplicate names.</p>
   <h5 id="fields_format"><a href="#contents">1. Fields CSV format</a></h5>
     <p>The csv scheme should contain each column header of the csv input. The column header is the name (not the label) of the field where to import items into. It can be a default header (name, description, weight, vid, vocabulary_machine_name, guid) or a custom field. The first item is always the name or the tid of a term.</p>
     <p>For example, you want to import a list of car makers, and you would like each car maker to have custom fields indicating nationality and date of origine(<a href="https://drupal.org/node/1027068#comment-4152194">origine of example, fictional</a>):</p>
@@ -249,8 +258,33 @@
       <li><code>list_boolean</code></li>
       <li><code>taxonomy_term_reference</code> <em>[Note: if value is a number, the field will be linked to the term with that tid; if value is a string, the field will be linked to an existing or a new term with that name.]</em></li>
       <li><code>file</code></li>
+      <li><code>image</code></li>
     </ul></p>
-  <h5 id="fields_custom"><a href="#contents">2. Autocreation of Fields</a></h5>
+  <h5 id="fields_structure_format"><a href="#contents">2. Structure and Fields CSV format</a></h5>
+    <p>You can import structure and fields simultaneously. The fields are always attached to the last term of the tree:</p>
+      <div class="codeblock"><ul>
+        <li><code>Europe, continent, Europe is a continent, specific item</code></li>
+        <li><code>Europe, France, , France is a country, </code></li>
+        <li><code>Europe, France, Lyon, , Lyon is a city, </code></li>
+      </ul></div>
+    <p>You can add empty names in order to begin the fields at the same column on each line:</p>
+      <div class="codeblock"><ul>
+        <li><code>Europe,       ,     , continent, Europe is a continent, specific item</code></li>
+        <li><code>Europe, France,     ,          , France is a country  , </code></li>
+        <li><code>Europe, France, Lyon,          , Lyon is a city       , </code></li>
+      </ul></div>
+    <p>"One term by line" format is supported with fields too:</p>
+      <div class="codeblock"><ul>
+        <li><code>Europe,       ,     , continent, Europe is a continent, specific item</code></li>
+        <li><code>      , France,     ,          , France is a country  , </code></li>
+        <li><code>      ,       , Lyon,          , Lyon is a city       , </code></li>
+      </ul></div>
+    <p>For these three examples, the custom format will be:
+    <div class="codeblock">
+      <code>tree, my_specific_field_for_continent, description, specific_field</code>
+    </div>
+    <p>Note that it's important to add empty content when a field is empty, particuliarly at the end of the line (here for <code>France</code> and <code>Lyon</code>).</p>
+  <h5 id="fields_custom"><a href="#contents">3. Autocreation of Fields</a></h5>
     <p>Custom fields are automatically created if they don't exist and then attached to the vocabulary. By default, a 'text' field is created when the field doesn't exist. If you want to create another type of field, you have to set it with <code>"|"</code> symbol in the vocabulary section of the form. The field is not created or modified if it exists.</p>
     <p>For exemple, you want to import these items (<a href="https://drupal.org/node/1027068#comment-4194716">origine of example</a>):</p>
     <div class="codeblock"><ul>
