@@ -12,6 +12,7 @@ Taxonomy csv import/export 7.x-5.11-dev, 2012-03-05
 #1463902 by Guillaume Viguier-Just: Support for image fields and folder check.
 #1386904 by Daniel Berthereau: Added support to export list of tids and names.
 #1386904 by Daniel Berthereau: Added simultaneous import of structure and fields
+#1386904 by Daniel Berthereau: Added full support of Structure and fields.
 
 Taxonomy csv import/export 7.x-5.11-dev, 2012-03-05
 Taxonomy csv import/export 6.x-5.11-dev, 2012-03-05
